--- a/web/css/style.css
+++ b/web/css/style.css
@@ -4647,9 +4647,9 @@ a:hover {
   height: 5rem;
 }
 .navbar-inverse .navbar-header .navbar-brand {
-  padding: 5px 30px;
+  padding: 0.5rem 3rem;
   vertical-align: middle;
-  line-height: 40px;
+  line-height: 4rem;
   font-size: 17pt;
 }
 .navbar-inverse .navbar-header .navbar-brand:hover {
@@ -4667,9 +4667,9 @@ a:hover {
   background: #73B205;
   box-shadow: 0 1px 3px 0 #9B9B9B;
   border-radius: 3px;
-  height: 25px;
-  padding: 15px 33px;
-  margin: 10px 15px;
+  height: 2.5rem;
+  padding: 1.5rem 3.3rem;
+  margin: 1rem 1.5rem;
   line-height: 0;
 }
 .navbar-inverse .nav > li a.btn-add-project:hover {
@@ -4679,13 +4679,13 @@ a:hover {
   background: #5f9304;
 }
 .navbar-inverse .nav > li a {
-  font-size: 14pt;
+  font-size: 1.9rem;
 }
 .navbar-inverse .nav > li a:hover {
   background-color: #1B65A4;
 }
 .navbar-inverse .nav > li .dropdown-menu {
-  min-width: 100px;
+  min-width: 10rem;
 }
 .navbar-inverse .nav > li .dropdown-menu li > a {
   font-size: 11pt;
@@ -4695,19 +4695,19 @@ a:hover {
   background-color: #f5f5f5;
 }
 .content-wrapper {
-  padding-top: 50px;
+  padding-top: 5rem;
 }
 .bg-colored {
   background-color: #F7F9FB;
 }
 .big-button {
   font-size: 18pt;
-  padding: 8px 30px;
+  padding: 0.8rem 3rem;
   color: #fff;
   background: #73B205;
   box-shadow: 0 1px 3px 0 #9B9B9B;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.3rem;
 }
 .big-button:hover {
   background: #6fac05;
@@ -4719,8 +4719,8 @@ a:hover {
 }
 .intro {
   text-align: center;
-  height: 260px;
-  padding: 60px;
+  height: 26rem;
+  padding: 6rem;
   font-size: 21pt;
 }
 .intro .add-project-wrapper {
@@ -4728,12 +4728,12 @@ a:hover {
 }
 .intro .add-project-wrapper a {
   font-size: 18pt;
-  padding: 8px 30px;
+  padding: 0.8rem 3rem;
   color: #fff;
   background: #73B205;
   box-shadow: 0 1px 3px 0 #9B9B9B;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.3rem;
 }
 .intro .add-project-wrapper a:hover {
   background: #6fac05;
@@ -4811,12 +4811,12 @@ a:hover {
 }
 .project-index .show-more a {
   font-size: 18pt;
-  padding: 8px 30px;
+  padding: 0.8rem 3rem;
   color: #fff;
   background: #73B205;
   box-shadow: 0 1px 3px 0 #9B9B9B;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.3rem;
 }
 .project-index .show-more a:hover {
   background: #6fac05;
@@ -4863,16 +4863,16 @@ a:hover {
 }
 .projects-flow .project a.details h1 {
   font-size: 14pt;
-  margin: 10px 0 0 0;
-  padding: 0 12px;
+  margin: 1rem 0 0 0;
+  padding: 0 1.2rem;
 }
 .projects-flow .project a.details img {
   margin: 0 auto;
 }
 .projects-flow .project .tags {
   margin: 0;
-  padding: 0 12px 10px 12px;
-  height: 30px;
+  padding: 0 1.2rem 1rem 1.2rem;
+  height: 3rem;
   text-overflow: ellipsis;
   white-space: nowrap;
   letter-spacing: 0.005em;
@@ -5112,9 +5112,9 @@ a:hover {
 }
 .project-view .project-body .information ul.tags li a,
 .project-preview .project-body .information ul.tags li a {
-  padding: 5px;
+  padding: 0.5rem;
   display: block;
-  line-height: 17px;
+  line-height: 1.7rem;
   color: #fff;
 }
 .project-view .project-body .information ul.tags li a:hover,
@@ -5178,7 +5178,7 @@ a:hover {
 }
 .project-view .project-body .images .image:not(:first-child),
 .project-preview .project-body .images .image:not(:first-child) {
-  margin: 15px;
+  margin: 1.5rem;
   flex: 1 0 5rem;
   display: inline-block;
   width: 33%;
@@ -5294,7 +5294,7 @@ a:hover {
   margin-right: -15px;
   display: block;
   color: #4A4A4A;
-  padding: 5px;
+  padding: 0.5rem;
 }
 .projects-list .projects .filters-wrapper .tags .list .item a:hover,
 .projects-list .projects .filters-wrapper .tags .list .item a.selected {
@@ -6486,7 +6486,7 @@ fieldset[disabled] .site-signup .form-wrapper .login-box .signup-button.focus {
     width: 0.1rem;
     position: absolute;
     height: 40%;
-    top: 10px;
+    top: 1rem;
     left: 50%;
   }
 }
@@ -6512,7 +6512,7 @@ fieldset[disabled] .site-signup .form-wrapper .login-box .signup-button.focus {
     width: 0.1rem;
     position: absolute;
     height: 40%;
-    bottom: 10px;
+    bottom: 1rem;
     left: 50%;
   }
 }
@@ -6575,7 +6575,7 @@ fieldset[disabled] .site-signup .form-wrapper .login-box .signup-button.focus {
   display: block;
   width: 100%;
   position: relative;
-  padding-left: 44px;
+  padding-left: 4.4rem;
   text-align: left;
   white-space: nowrap;
   overflow: hidden;
@@ -6662,8 +6662,8 @@ fieldset[disabled] a.site-signup .form-wrapper .oauth-box .auth-clients-wrapper 
   left: 0;
   top: 0;
   bottom: 0;
-  width: 32px;
-  line-height: 34px;
+  width: 3.2rem;
+  line-height: 3.4rem;
   font-size: 1.6em;
   text-align: center;
   border-right: 1px solid rgba(0, 0, 0, 0.2);
@@ -6872,6 +6872,6 @@ fieldset[disabled] .site-about .panes-wrapper .pane p.sponsor-link-wrapper a.foc
   color: #4a4a4a;
 }
 footer.footer {
-  height: 50px;
-  padding: 17px 130px;
+  height: 5rem;
+  padding: 1.7rem 13rem;
 }
