--- a/web/css/style.less
+++ b/web/css/style.less
@@ -75,9 +75,9 @@ a {
 
   .navbar-header {
     .navbar-brand {
-      padding: 5px 30px;
+      padding: 0.5rem 3rem;
       vertical-align: middle;
-      line-height: 40px;
+      line-height: 4rem;
       font-size: 17pt;
       &:hover {
         background-color: @dark-blue-color;
@@ -99,9 +99,9 @@ a {
       background: @primary-green-color;
       box-shadow: 0 1px 3px 0 @gray;
       border-radius: 3px;
-      height: 25px;
-      padding: 15px 33px;
-      margin: 10px 15px;
+      height: 2.5rem;
+      padding: 1.5rem 3.3rem;
+      margin: 1rem 1.5rem;
       line-height: 0;
 
       &:hover {
@@ -113,7 +113,7 @@ a {
     }
 
     a {
-      font-size: 14pt;
+      font-size: 1.9rem;
 
       &:hover {
         background-color: @dark-blue-color;
@@ -121,7 +121,7 @@ a {
     }
 
     .dropdown-menu {
-      min-width: 100px;
+      min-width: 10rem;
 
       li > a {
         font-size: 11pt;
@@ -138,7 +138,7 @@ a {
 // BODY
 
 .content-wrapper {
-  padding-top: 50px;
+  padding-top: 5rem;
 }
 
 .bg-colored {
@@ -149,12 +149,12 @@ a {
 
 .big-button {
   font-size: 18pt;
-  padding: 8px 30px;
+  padding: 0.8rem 3rem;
   color: #fff;
   background: @button-green-color;
   box-shadow: 0 1px 3px 0 @gray;
   border: 0;
-  border-radius: 3px;
+  border-radius: 0.3rem;
 
   &:hover {
     background: @button-green-hover-color;
@@ -168,8 +168,8 @@ a {
 
 .intro {
   text-align: center;
-  height: 260px;
-  padding: 60px;
+  height: 26rem;
+  padding: 6rem;
   font-size: 21pt;
 
   .add-project-wrapper {
@@ -243,8 +243,8 @@ a {
 
       h1 {
         font-size: 14pt;
-        margin: 10px 0 0 0;
-        padding: 0 12px;
+        margin: 1rem 0 0 0;
+        padding: 0 1.2rem;
       }
 
       img {
@@ -254,8 +254,8 @@ a {
 
     .tags {
       margin: 0;
-      padding: 0 12px 10px 12px;
-      height: 30px;
+      padding: 0 1.2rem 1rem 1.2rem;
+      height: 3rem;
       text-overflow: ellipsis;
       white-space: nowrap;
       letter-spacing: 0.005em;
@@ -368,9 +368,9 @@ a {
           }
 
           a {
-            padding: 5px;
+            padding: 0.5rem;
             display: block;
-            line-height: 17px;
+            line-height: 1.7rem;
             color: #fff;
 
             &:hover, &:active {
@@ -409,7 +409,7 @@ a {
         }
 
         &:not(:first-child) {
-          margin: 15px;
+          margin: 1.5rem;
           flex: 1 0 5rem;
           display: inline-block;
           width: 33%;
@@ -461,7 +461,7 @@ a {
               .make-row();
               display: block;
               color: #4A4A4A;
-              padding: 5px;
+              padding: 0.5rem;
 
               &:hover, &.selected {
                 background: @primary-blue-color;
@@ -867,7 +867,7 @@ a {
           width: 0.1rem;
           position: absolute;
           height: 40%;
-          top: 10px;
+          top: 1rem;
           left: 50%;
         }
       }
@@ -889,7 +889,7 @@ a {
           width: 0.1rem;
           position: absolute;
           height: 40%;
-          bottom: 10px;
+          bottom: 1rem;
           left: 50%;
         }
       }
@@ -930,7 +930,7 @@ a {
             .btn-block();
 
             position: relative;
-            padding-left: 44px;
+            padding-left: 4.4rem;
             text-align: left;
             white-space: nowrap;
             overflow: hidden;
@@ -955,8 +955,8 @@ a {
               left: 0;
               top: 0;
               bottom: 0;
-              width: 32px;
-              line-height: 34px;
+              width: 3.2rem;
+              line-height: 3.4rem;
               font-size: 1.6em;
               text-align: center;
               border-right: 1px solid rgba(0, 0, 0, 0.2);
@@ -1038,6 +1038,6 @@ a {
 // FOOTER
 
 footer.footer {
-  height: 50px;
-  padding: 17px 130px;
+  height: 5rem;
+  padding: 1.7rem 13rem;
 }
