--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -1,12 +1,12 @@
-@import "../../../vendor/bower-asset/bootstrap/less/variables";
-@import "../../../vendor/bower-asset/bootstrap/less/mixins";
-@import "../../../vendor/bower-asset/bootstrap/less/forms";
-@import "../../../vendor/bower-asset/bootstrap/less/utilities";
-@import "../../../vendor/bower-asset/bootstrap/less/navbar";
-@import "../../../vendor/bower-asset/bootstrap/less/grid";
-@import "../../../vendor/bower-asset/bootstrap/less/buttons";
+@import "../../../../vendor/bower-asset/bootstrap/less/variables";
+@import "../../../../vendor/bower-asset/bootstrap/less/mixins";
+@import "../../../../vendor/bower-asset/bootstrap/less/forms";
+@import "../../../../vendor/bower-asset/bootstrap/less/utilities";
+@import "../../../../vendor/bower-asset/bootstrap/less/navbar";
+@import "../../../../vendor/bower-asset/bootstrap/less/grid";
+@import "../../../../vendor/bower-asset/bootstrap/less/buttons";
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,500|Rubik:400,500');
-@import (reference) "../../../vendor/bower-asset/font-awesome/less/font-awesome";
+@import (reference) "../../../../vendor/bower-asset/font-awesome/less/font-awesome";
 
 .font-primary() {
   font-family: 'Roboto', sans-serif;
