Fixed border size

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -1059,7 +1059,7 @@ label.status-deleted {
 
 .project article.status-deleted {
   opacity: 0.5;
-  border: @color-deleted;
+  border: 2px solid @color-deleted;
 }
 
 .project article.status-draft {
