--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -1009,6 +1009,7 @@ a {
   .bg-colored();
 
   .panes-wrapper {
+    background: #fff;
     .container();
 
     @media (max-width: @screen-sm-max) {
@@ -1017,11 +1018,9 @@ a {
     }
 
     .pane {
-      .make-xs-column(12);
-      .make-sm-column(4);
-      .make-xs-column-offset(1);
+      .make-sm-column(12);
+      .make-md-column(6);
 
-      background-color: #fff;
       border-radius: 3px;
 
       padding: 3rem;
