Fixed tags style for mobile devices

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -491,12 +491,12 @@ a {
             }
 
             .name {
-              .make-sm-column(8);
+              .make-xs-column(8);
               font-weight: 500;
               font-size: 12pt;
             }
             .count {
-              .make-sm-column(4);
+              .make-xs-column(4);
               text-align: right;
               font-size: 10pt;
             }
