Added ability to select image as primary [skip ci]

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -606,6 +606,13 @@ a {
             right: 1rem;
             font-size: 3rem;
           }
+
+          .primary-image {
+            cursor: pointer;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
         }
 
         .upload {
