Add voting to projects.

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -297,6 +297,42 @@ a {
         }
       }
     }
+
+    .vote {
+      margin: 0px 0px 5px 10px;
+      
+      .button {
+        font-size: 120%;
+        cursor: pointer;
+      }
+      
+      .up {
+        color: green;
+        &:hover {
+          color: darkgreen;
+        }
+      }
+
+      .down {
+        color: red;
+        &:hover {
+          color: darkred;
+        }
+      }
+      
+      .value {
+        margin: 0px 5px;
+        vertical-align: top;
+      }
+      
+      .disabled {
+        cursor: inherit;
+        color: @gray;
+        &:hover {
+          color: @gray;
+        }
+      }
+    }
   }
 
   .pagination {
