--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -299,7 +299,7 @@ a {
     }
     
     .vote {
-      margin: 0px 0px 5px 10px;
+      margin: 0 0 5px 10px;
       
       #block_vote
     }
@@ -1164,7 +1164,7 @@ label.status-deleted {
   }
 
   .value {
-    margin: 0px 5px;
+    margin: 0 5px;
     vertical-align: top;
   }
 
