Fixes #14: implemented voting

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -297,6 +297,12 @@ a {
         }
       }
     }
+    
+    .vote {
+      margin: 0 0 5px 10px;
+      
+      #block_vote
+    }
   }
 
   .pagination {
@@ -452,6 +458,10 @@ a {
         margin: 1em 0;
       }
     }
+  }
+
+  .vote {
+    #block_vote
   }
 }
 
@@ -1131,4 +1141,38 @@ label.status-deleted {
 .project article.status-draft {
   opacity: 0.7;
   border: 2px solid @color-draft;
+}
+
+#block_vote {
+  .button {
+    font-size: 120%;
+    cursor: pointer;
+  }
+
+  .up {
+    color: green;
+    &:hover {
+      color: darkgreen;
+    }
+  }
+
+  .down {
+    color: red;
+    &:hover {
+      color: darkred;
+    }
+  }
+
+  .value {
+    margin: 0 5px;
+    vertical-align: top;
+  }
+
+  .disabled {
+    cursor: inherit;
+    color: @gray;
+    &:hover {
+      color: @gray;
+    }
+  }
 }
