Ability to delete a project.

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -708,9 +708,16 @@ a {
       width: 10em;
     }
 
-    &.back a,
-    &.draft a {
+    &.back a {
       .btn-info();
+    }
+
+    &.draft a {
+      .btn-warning();
+    }
+
+    &.delete a {
+      .btn-danger();
     }
 
     &.publish a,
