Small css fixes: place footer to the bottom of the screen

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -62,6 +62,20 @@
   .font-primary();
 }
 
+html,
+body {
+  height: 100%;
+}
+
+.wrap {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+.content {
+  flex: 1 0 auto;
+}
+
 a {
   color: @footer-link-color;
 
@@ -220,6 +234,7 @@ a {
   justify-content: center;
   align-items: flex-start;
   padding-top: 1em;
+  padding-bottom: 1em;
 
   .project {
     @media (max-width: @screen-sm-max) {
@@ -1106,6 +1121,7 @@ a {
 footer.footer {
   min-height: 5rem;
   padding: 1.7rem 0;
+  flex: 0 0 auto;
 
   .container {
 
