#47 — update form for user: add avatar field for user-table, add upload function, display fullname and uploaded avatar in view and update-form; fix some styles.

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -841,6 +841,18 @@ a {
   }
 }
 
+.user-update {
+  .form-wrap {
+    .container();
+    padding: 0 15px 2em;
+  }
+
+  .current-avatar > strong {
+    display: inline-block;
+    margin-bottom: 5px;
+  }
+}
+
 .site-request-password-reset,
 .site-reset-password {
   .bg-colored();
@@ -1198,4 +1210,8 @@ label.status-deleted {
       color: @gray;
     }
   }
+}
+
+.container-alert {
+  margin-top: 20px;
 }
