Fixes #61: Fixed upload screen issues

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -649,7 +649,7 @@ a {
           padding: 1em 0;
 
           &:first-child {
-            min-width: 50em;
+            min-width: 100%;
             min-height: 30em;
 
             @media (max-width: @screen-sm-max) {
