Added filter HTML for the project description and comments.

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -1247,6 +1247,12 @@ label.status-deleted {
       
       .body {
         padding: 22px;
+
+        .text {
+          img {
+            max-width: 90%;
+          }
+        }
       }
     }
   }
