Add verified check and ability to set project as "verified"

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -356,6 +356,15 @@ a {
           content: @fa-var-star;
         }
       }
+
+      .verified {
+        .fa-icon();
+        color: @primary-green-color;
+
+        &:before {
+          content: @fa-var-check-circle;
+        }
+      }
     }
 
     .authors {
