Display warning icon if project is detected as non-Yii

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -365,6 +365,15 @@ a {
           content: @fa-var-check-circle;
         }
       }
+
+      .warning {
+        .fa-icon();
+        color: @orange-color;
+
+        &:before {
+          content: @fa-var-warning;
+        }
+      }
     }
 
     .authors {
