--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -557,8 +557,11 @@ a {
       .project {
         .badges {
           position: absolute;
-          right: .5em;
-          top: .5em;
+          right: 0;
+          top: 0;
+          padding: 0.5em;
+          background: #fff;
+          border-radius: 0 0 0 5px;
         }
 
         .tags {
