Make project badges style universal

--- a/assets/app/styles/main.less
+++ b/assets/app/styles/main.less
@@ -555,15 +555,6 @@ a {
       margin-left: 0;
 
       .project {
-        .badges {
-          position: absolute;
-          right: 0;
-          top: 0;
-          padding: 0.5em;
-          background: #fff;
-          border-radius: 0 0 0 5px;
-        }
-
         .tags {
           font-size: 11pt;
         }
@@ -574,6 +565,15 @@ a {
       }
     }
   }
+}
+
+.project .badges {
+  position: absolute;
+  right: 0;
+  top: 0;
+  padding: 0.5em;
+  background: #fff;
+  border-radius: 0 0 0 5px;
 }
 
 .project-add,
